Fixed Security issues,Add a better sign up process